<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAnimations"
                style="@style/ButtonWhite"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:fontFamily="@font/noto_medium"
                android:text="@string/menu_animations" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSingleRequest"
                style="@style/ButtonWhite"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/noto_medium"
                android:text="@string/menu_single_request" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnMultipleRequests"
                style="@style/ButtonWhite"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/noto_medium"
                android:text="@string/menu_multiple_requests" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnFlow"
                style="@style/ButtonWhite"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/noto_medium"
                android:text="@string/menu_flow" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>